--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "redux-todomvc-example",
+
   "version": "0.0.0",
+
   "description": "Redux TodoMVC example",
+
   "scripts": {
+
     "start": "node server.js",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./test/setup.js",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+
+    "postinstall": "npm run build",
+    "build": "webpack --config webpack.config.js"
   },
+
   "repository": {
     "type": "git",
     "url": "https://github.com/reactjs/redux.git"
   },
+
   "license": "MIT",
+
   "bugs": {
     "url": "https://github.com/reactjs/redux/issues"
   },
+
   "homepage": "http://redux.js.org",
+
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "classnames": "^2.1.2",
@@ -24,10 +36,12 @@
     "react-redux": "^4.2.1",
     "redux": "^3.2.1"
   },
+
   "devDependencies": {
-    "babel-core": "^6.3.15",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.1",
     "babel-register": "^6.3.13",
@@ -39,9 +53,11 @@
     "node-libs-browser": "^0.5.2",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^0.14.7",
+    "react-hot-loader": "^1.3.0",
     "style-loader": "^0.12.3",
     "todomvc-app-css": "^2.0.1",
     "webpack": "^1.9.11",
+    "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.2.0"
   }
