--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
   "homepage": "http://redux.js.org",
 
   "dependencies": {
+    
     "babel-polyfill": "^6.3.14",
     "classnames": "^2.1.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.2.1",
-    "redux": "^3.2.1"
-  },
+    "redux": "^3.2.1",
 
-  "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
     "babel-polyfill": "^6.5.0",
